--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <!-- NAVBAR
 ================================================== -->
   <body>
+    <div class="navbar-outer">
     <div class="navbar-wrapper">
       <div class="container">
 
@@ -39,7 +40,6 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Winsitter</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -55,7 +55,7 @@
 
       </div>
     </div>
-
+    </div>
 
     <!-- Carousel
     ================================================== -->
