header work to match joes mockups

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,58 +24,59 @@
 
     <!-- Custom styles for this template -->
     <link href="landing.css" rel="stylesheet">
-  </head>
+</head>
 <!-- NAVBAR
 ================================================== -->
-  <body>
+
+<body>
     <div class="navbar-outer">
-    <div class="navbar-wrapper">
-      <div class="container">
+        <div class="navbar-wrapper">
+            <div class="container">
 
-        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
+                <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                        </div>
+                        <div class="navbar-collapse collapse">
+                            <ul class="nav navbar-nav">
+                                <li class="active"><a href="#">Home</a>
+                                </li>
+                                <li><a href="#about">About Us</a>
+                                </li>
+                                <li><a href="#details">Details</a>
+                                </li>
+                                <li><a href="#blog">The Heartbeat Blog</a>
+                                </li>
+                                <li><a href="#support">Support</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
             </div>
-            <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#details">Details</a></li>
-                <li><a href="#blog">The Heartbeat Blog</a></li>
-                <li><a href="#support">Support</a></li>
-              </ul>
-            </div>
-          </div>
         </div>
-
-      </div>
-    </div>
     </div>
 
-    <!-- Carousel
+    <!-- Header
     ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-      <div class="carousel-inner">
-        <div class="item active">
-          <img data-src="holder.js/900x500/auto/#777:#7a7a7a/text:First slide" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Prevent Downtime with Automatic Windows Server Monitoring</h1>
-              <p>Join Our Free Beta to Monitor Your Servers In 5 Minutes! It's a few easy steps to monitor your onsite, 
-                 hosted, and cloud Windows Servers... </p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-            </div>
-          </div>
+    <div id="header">
+        <div id="header_inner">
+            <h1>RELAX! Prevent Downtime with Automatic Windows Server Monitoring</h1>
+            <h2>Join Our Free Beta to Monitor Your Servers In 5 Minutes!</h2>
+            <p>It's a few easy steps to monitor your onsite, hosted, and cloud Windows Servers...</p>
+            <br />
+            <p><a id="btnSignUp" href="#" role="button">Sign up today</a>
+            </p>
         </div>
-      </div>
-    </div><!-- /.carousel -->
+    </div>
+    <!-- /.header -->
 
 
 
@@ -84,81 +86,97 @@
 
     <div class="container marketing">
 
-      <!-- Three columns of text below the carousel -->
-      <div class="row">
-        <div class="col-lg-4">
-          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
-          <h2>Actually Prevent Downtime??</h2>
-          <p>Yep. We alert you of many conditions before they become an outage. SSL certificate expiration, RAM/CPU/Drive capacity, disk I/O, Kerberos time checks... and more. Warnings come as emails and SMS before it becomes an outage issue.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
-          <h2>But Why?</h2>
-          <p>We love Windows. But let’s face it, it’s still difficult for busy admins to get notified of common every-day server issues.</p>
-          <p>We created Winsitter in a way that removes complexity and geekiness of our monitoring solution so anyone can signup, install the agent, and sleep better knowing they’ll be notified of issues before users notify them.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
-          <h2>Windows Server Monitoring as a Service</h2>
-          <p>If you are able to install our tiny agent on Windows, then you can start monitoring it within minutes.</p>
-          <p>Our smarty-smart robots do all the analysis and only report back to you when there are current issues or potental ones. You get to do more fun stuff with all your new free time!
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
-
-
-      <!-- START THE FEATURETTES -->
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Free edition with <span class="text-muted">Amazingly Fast Install</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <!-- Three columns of text below the carousel -->
+        <div class="row">
+            <div class="col-lg-4">
+                <img class="img-circle" src="/images/1.jpg" alt="Generic placeholder image">
+                <h2>Actually Prevent Downtime??</h2>
+                <p>Yep. We alert you of many conditions before they become an outage. SSL certificate expiration, RAM/CPU/Drive capacity, disk I/O, Kerberos time checks... and more. Warnings come as emails and SMS before it becomes an outage issue.</p>
+                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a>
+                </p>
+            </div>
+            <!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="img-circle" src="/images/2.jpg" alt="Generic placeholder image">
+                <h2>But Why?</h2>
+                <p>We love Windows. But let’s face it, it’s still difficult for busy admins to get notified of common every-day server issues.</p>
+                <p>We created Winsitter in a way that removes complexity and geekiness of our monitoring solution so anyone can signup, install the agent, and sleep better knowing they’ll be notified of issues before users notify them.</p>
+                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a>
+                </p>
+            </div>
+            <!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="img-circle" src="/images/3.jpg" alt="Generic placeholder image">
+                <h2>Windows Server Monitoring as a Service</h2>
+                <p>If you are able to install our tiny agent on Windows, then you can start monitoring it within minutes.</p>
+                <p>Our smarty-smart robots do all the analysis and only report back to you when there are current issues or potental ones. You get to do more fun stuff with all your new free time!
+                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a>
+                    </p>
+            </div>
+            <!-- /.col-lg-4 -->
         </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        <!-- /.row -->
+
+
+        <!-- START THE FEATURETTES -->
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+            <div class="col-md-7">
+                <h2 class="featurette-heading">Free edition with
+                    <span class="text-muted">Amazingly Fast Install</span>
+                </h2>
+                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            </div>
+            <div class="col-md-5">
+                <img class="featurette-image img-responsive" src="/images/big1.jpg" alt="Generic placeholder image">
+            </div>
         </div>
-      </div>
 
-      <hr class="featurette-divider">
+        <hr class="featurette-divider">
 
-      <div class="row featurette">
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        <div class="row featurette">
+            <div class="col-md-5">
+                <img class="featurette-image img-responsive" src="/images/big2.jpg" alt="Generic placeholder image">
+            </div>
+            <div class="col-md-7">
+                <h2 class="featurette-heading">Ever increasing list of
+                    <span class="text-muted">things we monitor on each server</span>
+                </h2>
+                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            </div>
         </div>
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Ever increasing list of <span class="text-muted">things we monitor on each server</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+            <div class="col-md-7">
+                <h2 class="featurette-heading">No additional infrastructure
+                    <span class="text-muted">to use Winsitter</span>
+                </h2>
+                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            </div>
+            <div class="col-md-5">
+                <img class="featurette-image img-responsive" src="/images/big3.jpg" alt="Generic placeholder image">
+            </div>
         </div>
-      </div>
 
-      <hr class="featurette-divider">
+        <hr class="featurette-divider">
 
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">No additional infrastructure <span class="text-muted">to use Winsitter</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <!-- /END THE FEATURETTES -->
+        <!-- /END THE FEATURETTES -->
 
 
-      <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-      </footer>
+        <!-- FOOTER -->
+        <footer>
+            <p class="pull-right"><a href="#">Back to top</a>
+            </p>
+            <p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a>
+            </p>
+        </footer>
 
-    </div><!-- /.container -->
+    </div>
+    <!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
@@ -167,5 +185,6 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
     <script src="holder.js"></script>
-  </body>
+</body>
+
 </html>
