windows logo added.  small updates to index

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                     <br />
                     <p>
-                        <a id="btnSignUp" href="https://dashboard.winsitter.com" role="button">Sign up today</a>
+                        <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button">Get Started Now!</a>
                     </p>
                 </div>
             </div>
@@ -106,7 +106,6 @@
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <div class="container marketing" id="details">
-
         <!-- Three columns of text below the carousel -->
         <div class="row ">
             <div class="col-lg-4 ">
@@ -121,7 +120,7 @@
             </div>
             <!-- /.col-lg-4 -->
             <div class="col-lg-4 ">
-                <img class="img-circle " src="/images/2.jpg " alt="Generic placeholder image ">
+                <img class="img" src="/images/windowsLogo.png" alt="Generic placeholder image ">
                 <h2>But Why?</h2>
                 <p>We love Windows. But let’s face it, it’s still difficult for busy admins to get notified of common every-day server issues.</p>
                 <p>We created Winsitter in a way that removes complexity and geekiness of our monitoring solution so anyone can signup, install the agent, and sleep better knowing they’ll be notified of issues before users notify them.</p>
@@ -196,7 +195,7 @@
 
         <!-- /END THE FEATURETTES -->
 
-        <div id="about " class="container ">
+        <div id="about" class="container ">
             <div class="row ">
                 <div class="col-md-12 ">
                     <h2>About Us</h2>
