--- a/output/index.html
+++ b/output/index.html
@@ -16,6 +16,9 @@
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
+<!-- Font AWESOME YO! -->
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
@@ -37,8 +40,9 @@
     <div class="navbar-wrapper">
       <div class="container">
 
-        <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
           <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -46,24 +50,23 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
+              <a class="navbar-brand" href="#"><img src="images/winsitter.png" /></a>
             </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active">
-                  <a href="#">Home</a>
-                </li>
-                <li>
-                  <a href="#details">Details</a>
-                </li>
-                <li>
-                  <a href="http://blog.winsitter.com">The Heartbeat Blog</a>
-                </li>
-                <li>
-                  <a href="#about">About Us</a>
-                </li>
-                <li>
-                  <a href="#support">Support</a>
-                </li>
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#details">Details</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="http://winsitter.com/blog">Blog</a></li>
+                <li><a href="/support">Support</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="https://dashboard.winsitter.com/">Login</a></li>
+                <li><a href="https://twitter.com/winsitter"><i class="fa fa-twitter fa-lg"></i></a></li>
+                <li><a href="https://facebook.com/winsitter"><i class="fa fa-facebook fa-lg"></i></a></li>
+                <li><a href="http://winsitter.com/feed.rss"><i class="fa fa-rss fa-lg"></i></a></li>
               </ul>
             </div>
           </div>
@@ -95,7 +98,7 @@
 
           <br />
           <p>
-            <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button">Get Started Now!</a>
+            <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button">Signup for a Free Trial!</a>
           </p>
         </div>
       </div>
@@ -111,40 +114,63 @@
 
   <div class="container marketing" id="details">
     <!-- Three columns of text below the carousel -->
-    <div class="row ">
-      <div class="col-lg-4 ">
-        <img class="img-circle " src="/images/1.jpg " alt="Generic placeholder image ">
-        <h2>Actually Prevent Downtime??</h2>
-        <p>Yep. We alert you of many conditions before they become an outage. SSL certificate expiration, RAM/CPU/Drive capacity, disk I/O, Kerberos time checks... and more. Warnings come as emails and SMS before it becomes an outage issue.</p>
-        <!--
-                <p>
-                    <a class="btn btn-default " href="# " role="button ">View details &raquo;</a>
-                </p>
--->
+    <div class="row">
+      <div class="col-lg-4">
+        <span class="fa-stack fa-5x">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
+        </span>
+        <h2>Actually Prevent Downtime?</h2>
+        <p>
+          Yep. We alert you of many conditions before they become an outage.
+          SSL certificate expiration, RAM/CPU/Drive capacity, disk I/O,
+          NTP time checks... and more. Warnings come as emails and SMS before
+          it becomes an outage issue.
+        </p>
+        <p>
+            <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
+        </p>
+
       </div>
       <!-- /.col-lg-4 -->
-      <div class="col-lg-4 ">
-        <img class="img" src="/images/windowsLogo.png" alt="Generic placeholder image ">
-        <h2>But Why?</h2>
-        <p>We love Windows. But let’s face it, it’s still difficult for busy admins to get notified of common every-day server issues.</p>
-        <p>We created Winsitter in a way that removes complexity and geekiness of our monitoring solution so anyone can signup, install the agent, and sleep better knowing they’ll be notified of issues before users notify them.</p>
-        <!--
-                <p>
-                    <a class="btn btn-default " href="# " role="button ">View details &raquo;</a>
-                </p>
--->
+      <div class="col-lg-4">
+        <img class="img" width="130" src="/images/windowsLogo.png" alt="Windows Logo">
+        <h2>Sleep Better Knowing Your Covered</h2>
+        <p>
+          We love Windows. But let’s face it, it’s still difficult for busy
+          admins to get notified of common every-day server issues.
+        </p>
+        <p>
+          We created Winsitter in a way that removes the complexity of setting up
+          monitoring and mobile alerts. Anyone can signup,
+          easily install the agent, and sleep better knowing they’ll be
+          notified of issues.
+        </p>
+
+        <p>
+            <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
+        </p>
+
       </div>
       <!-- /.col-lg-4 -->
-      <div class="col-lg-4 ">
-        <img class="img-circle " src="/images/3.jpg " alt="Generic placeholder image ">
-        <h2>Windows Server Monitoring as a Service</h2>
-        <p>If you are able to install our tiny agent on Windows, then you can start monitoring it within minutes.</p>
-        <p>Our smarty-smart robots do all the analysis and only report back to you when there are current issues or potental ones. You get to do more fun stuff with all your new free time!
-          <!--
-                    <p>
-    <a class="btn btn-default " href="# " role="button ">View details &raquo;</a>
-</p>
--->
+      <div class="col-lg-4">
+        <span class="fa-stack fa-5x">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-ambulance fa-stack-1x"></i>
+        </span>
+        <h2>Windows Server Monitoring-as-a-Service</h2>
+        <p>
+          If you are able to install our tiny agent on Windows, then you can
+          start monitoring it within minutes.
+        </p>
+        <p>Our smarty-smart robots do all the analysis and only report back
+          to you when there are current issues or potental ones. You get to
+          do more fun stuff with all your new free time!
+        </p>
+        <p>
+          <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
+        </p>
+
       </div>
       <!-- /.col-lg-4 -->
     </div>
@@ -153,80 +179,105 @@
 
     <!-- START THE FEATURETTES -->
 
-    <hr class="featurette-divider ">
+    <hr class="featurette-divider">
 
-    <div class="row featurette ">
-      <div class="col-md-7 ">
-        <h2 class="featurette-heading ">Free edition with
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Free Trial With
 
-                    <span class="text-muted ">Amazingly Fast Install</span>
+                    <span class="text-muted">Amazingly Fast Install</span>
 
                 </h2>
-        <p class="lead ">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">
+          words.
+        </p>
       </div>
-      <div class="col-md-5 ">
-        <img class="featurette-image img-responsive " src="/images/big1.jpg " alt="Generic placeholder image ">
+      <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="/images/big1.jpg" alt="Generic placeholder image">
       </div>
     </div>
 
-    <hr class="featurette-divider ">
+    <hr class="featurette-divider">
 
-    <div class="row featurette ">
-      <div class="col-md-5 ">
-        <img class="featurette-image img-responsive " src="/images/big2.jpg " alt="Generic placeholder image ">
+    <div class="row featurette">
+      <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="/images/big2.jpg" alt="Generic placeholder image">
       </div>
-      <div class="col-md-7 ">
-        <h2 class="featurette-heading ">Ever increasing list of
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Ever increasing list of
 
-                    <span class="text-muted ">things we monitor on each server</span>
+                    <span class="text-muted">things we monitor on each server</span>
 
                 </h2>
-        <p class="lead ">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">
+         more words.
+        </p>
       </div>
     </div>
 
-    <hr class="featurette-divider ">
+    <hr class="featurette-divider">
 
-    <div class="row featurette ">
-      <div class="col-md-7 ">
-        <h2 class="featurette-heading ">No additional infrastructure
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">No additional infrastructure
 
-                    <span class="text-muted ">to use Winsitter</span>
+                    <span class="text-muted">to use Winsitter</span>
 
                 </h2>
-        <p class="lead ">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">
+          more words.
+        </p>
       </div>
-      <div class="col-md-5 ">
-        <img class="featurette-image img-responsive " src="/images/big3.jpg " alt="Generic placeholder image ">
+      <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="/images/big3.jpg" alt="Generic placeholder image">
       </div>
     </div>
 
-    <hr class="featurette-divider ">
+    <hr class="featurette-divider">
 
     <!-- /END THE FEATURETTES -->
 
-    <div id="about" class="container ">
-      <div class="row ">
-        <div class="col-md-12 ">
+    <div id="about" class="container">
+      <div class="row">
+        <div class="col-md-12">
           <h2>About Us</h2>
         </div>
       </div>
-      <div class="row ">
-        <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-4">
             <img src="https://www.gravatar.com/avatar/53dc2db8d7a7e643d9a1fbefe15c9f42?s=150" class="img-responsive" />
             <h3>Bret Fisher</h3>
-            <strong>Chief Executive Officer</strong>
+            <strong>CEO and Sysadmin</strong>
             <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, eveniet sapiente ipsam suscipit expedita consectetur recusandae impedit porro sunt a eligendi aspernatur est distinctio qui perferendis provident nihil sequi aut.</p>
+            <p>
+              Believes Windows Servers deserve better tools for monitoring.
+              Nearly 30 Microsoft certs, and 20 years of managing Windows networks.
+              Remembers the good ol' days of EMM386.EXE, but doesn't miss them.
+            </p>
             <a href="https://twitter.com/BretFisher" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @BretFisher</a>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <img src="https://www.gravatar.com/avatar/821840a87c343cf8073dc5f5ce289cbd?s=150" class="img-responsive" />
           <h3>Kevin Griffin</h3>
-          <strong>Chief Technology Officer</strong>
+          <strong>CTO and Lead Developer</strong>
           <br>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, eveniet sapiente ipsam suscipit expedita consectetur recusandae impedit porro sunt a eligendi aspernatur est distinctio qui perferendis provident nihil sequi aut.</p>
+          <p>
+            Microsoft MVP, trainer, and conference speaker. User Group Leader.
+            Loves .NET along with Node.js and Open Source. Kills code bugs with bacon.
+          </p>
           <a href="https://twitter.com/1kevgriff" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @1kevgriff</a>
+        </div>
+        <div class="col-md-4">
+          <img src="https://www.gravatar.com/avatar/da5e4f42f7924b08916f814825321220?s=150" class="img-responsive" />
+          <h3>Joe The Man</h3>
+          <strong>Chief Monitor</strong>
+          <br>
+          <p>
+            Our mascott, and always-dilligent alert robot.
+            Likes"Ship It" squirrels.
+            Dreams of being a real boy.
+          </p>
+          <a href="https://twitter.com/winsitter" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @winsitter</a>
         </div>
       </div>
     </div>
@@ -234,8 +285,8 @@
 
     <!-- FOOTER -->
     <footer>
-      <p class="pull-right ">
-        <a href="# ">Back to top</a>
+      <p class="pull-right">
+        <a href="#">Back to top</a>
       </p>
       <p>&copy; Winsitter, Inc. &middot;
         <a href="#">Privacy</a>&middot;
