griff copy + msi cmd line

--- a/output/index.html
+++ b/output/index.html
@@ -182,18 +182,18 @@
     <hr class="featurette-divider">
 
     <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">Free Trial With
-
-                    <span class="text-muted">Amazingly Fast Install</span>
-
-                </h2>
+      <div class="col-md-12">
+        <h2 class="featurette-heading">Free Trial With <span class="text-muted">Amazingly Fast Install</span></h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
         <p class="lead">
-          words.
+          No gigabyte downloads.  No complicated configurations.  One simple command and you're running in less than a minute.
         </p>
       </div>
-      <div class="col-md-5">
-        <img class="featurette-image img-responsive" src="/images/big1.jpg" alt="Generic placeholder image">
+      <div class="col-md-8">
+        <img class="featurette-image img-responsive" src="/images/easyCommandLine.png" alt="Generic placeholder image">
       </div>
     </div>
 
@@ -204,13 +204,13 @@
         <img class="featurette-image img-responsive" src="/images/big2.jpg" alt="Generic placeholder image">
       </div>
       <div class="col-md-7">
-        <h2 class="featurette-heading">Ever increasing list of
-
-                    <span class="text-muted">things we monitor on each server</span>
-
-                </h2>
+        <h2 class="featurette-heading">Ever increasing list of <span class="text-muted">things we monitor on each server</span></h2>
         <p class="lead">
-         more words.
+          <p><i class="fa fa-check-circle-o "></i> Heartbeat detection</p>
+          <p><i class="fa fa-check-circle-o "></i> SSL Expiration</p>
+          <p><i class="fa fa-check-circle-o "></i> Pending Windows Updates</p>
+          <p><i class="fa fa-check-circle-o "></i> Unusual Memory and CPU Utilization</p>
+          <p><i class="fa fa-check-circle-o "></i> and MORE!</p>
         </p>
       </div>
     </div>
