fa windows log.  bigger checkmarks.  green checkmarks.  bigger text

--- a/output/index.html
+++ b/output/index.html
@@ -134,7 +134,9 @@
       </div>
       <!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="img" width="130" src="/images/windowsLogo.png" alt="Windows Logo">
+        <span class="fa-stack fa-5x">
+          <i class="fa fa-windows"></i>
+        </span>
         <h2>Sleep Better Knowing Your Covered</h2>
         <p>
           We love Windows. But let’s face it, it’s still difficult for busy
@@ -205,12 +207,12 @@
       </div>
       <div class="col-md-7">
         <h2 class="featurette-heading">Ever increasing list of <span class="text-muted">things we monitor on each server</span></h2>
-        <p class="lead">
-          <p><i class="fa fa-check-circle-o "></i> Heartbeat detection</p>
-          <p><i class="fa fa-check-circle-o "></i> SSL Expiration</p>
-          <p><i class="fa fa-check-circle-o "></i> Pending Windows Updates</p>
-          <p><i class="fa fa-check-circle-o "></i> Unusual Memory and CPU Utilization</p>
-          <p><i class="fa fa-check-circle-o "></i> and MORE!</p>
+        <p class="lead" id="featureCheckList">
+          <span><i class="fa fa-check-circle-o fa-3x green"></i> Heartbeat detection</span><br/>
+          <span><i class="fa fa-check-circle-o fa-3x green"></i> SSL Expiration</span><br/>
+          <span><i class="fa fa-check-circle-o fa-3x green"></i> Pending Windows Updates</span><br/>
+          <span><i class="fa fa-check-circle-o fa-3x green"></i> Unusual Memory and CPU Utilization</span><br/>
+          <span><i class="fa fa-check-circle-o fa-3x green"></i> and MORE!</span><br/>
         </p>
       </div>
     </div>
