--- a/output/index.html
+++ b/output/index.html
@@ -135,7 +135,7 @@
       <!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <span class="fa-stack fa-5x">
-          <i class="fa fa-windows"></i>
+          <i class="fa fa-windows fa-2x"></i>
         </span>
         <h2>Sleep Better Knowing Your Covered</h2>
         <p>
