--- a/source/index.html
+++ b/source/index.html
@@ -195,7 +195,7 @@
         </p>
       </div>
       <div class="col-md-8">
-        <img class="featurette-image img-responsive" src="/images/easyCommandLine.png" alt="Generic placeholder image">
+        <img class="featurette-image img-responsive imgShadow" src="/images/easyCommandLine.png" alt="Generic placeholder image">
       </div>
     </div>
 
